7902876: Cleanup Instr tool (#12)
* 7902535: Code coverage does not work in JDK 8

* 7902697: Switch jcov to the latest asm lib to support latest classfile

* 7902642: Make JCov runtime to only depend on java.base

* 7902724: jcov ignores covariant method overriding while gathering a methods' coverages

* 7902783: Static instrumentation fails with Java 9 and above if multiple inputs are used

* 7902796: Provide a "release" file for JCov builds

* 7902823: RepGen fails with IllegalFormatArgumentIndexException if started by JDK 16 and above

* 7902819: jcov fails to instrument JDKs records

* 7902724: jcov ignores covariant method overriding while gathering a methods coverages

* 7902764: RepGen: Javap mode doesn't support classes that have no package

* Instrumentation plugin concept

Reviewed-by: lkuskov

* 7902876: Cleanup Instr tool

Co-authored-by: Alexandre Iline <shurailine@openjdk.org>